implement new methods
